<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UploadActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="307dp"
        android:layout_height="217dp"
        android:layout_marginTop="45dp"
        android:onClick="selectedImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add_photo"
        tools:ignore="UsingOnClickInXml"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/textComment"
        android:layout_width="305dp"
        android:layout_height="45dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/comment"
        android:textColorHint="@color/gray"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/upload"
        android:onClick="upload"
        app:layout_constraintEnd_toEndOf="@+id/textComment"
        app:layout_constraintTop_toBottomOf="@+id/textComment"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>